--- a/GP_recovery_run.ipynb
+++ b/GP_recovery_run.ipynb
@@ -184,6 +184,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee2bf93c-95c7-43ee-b098-c1667808ca84",
+   "metadata": {},
+   "source": [
+    "Note that some of the true parameters are\n",
+    "\n",
+    "amp(A) = 60\n",
+    "\n",
+    "nu_max = 3080.82489\n",
+    "\n",
+    "delta_nu = 135\n",
+    "\n",
+    "epsilon = 0\n",
+    "\n",
+    "Q = 400\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "id": "89e66eb1-716b-4ffe-a774-075e87815009",
