--- a/GP_recovery_run.ipynb
+++ b/GP_recovery_run.ipynb
@@ -190,6 +190,17 @@
    "source": [
     "Note that some of the true parameters are\n",
     "\n",
+    "Amplitudes = 0.17815398337889624\n",
+    "0.22196452877492187\n",
+    "0.26336135786308595\n",
+    "0.29757809812482694\n",
+    "0.3202066230161938\n",
+    "0.3281255832\n",
+    "0.3202066230161938\n",
+    "0.29757809812482694\n",
+    "0.26336135786308595\n",
+    "0.22196452877492187\n",
+    "0.17815398337889624\n",
     "\n",
     "nu_max = 3080.82489\n",
     "\n",
